@@ -8,6 +8,8 @@ import arc.math.Angles;
 import arc.math.Interp;
 import arc.math.Mathf;
 import arc.math.Rand;
+import arc.math.geom.Vec2;
+import arc.struct.Queue;
 import arc.struct.Seq;
 import arc.util.Interval;
 import arc.util.Time;
@@ -17,12 +19,15 @@ import mindustry.entities.abilities.Ability;
 import mindustry.gen.Unit;
 import mindustry.graphics.Layer;
 import mindustry.graphics.Trail;
+import mindustry.type.UnitType;
+import newhorizon.util.func.PositionOffset;
 
 public class BoostAbility extends Ability{
 	public static final int maxSize = 8;
 	
 	public boolean drawAirFlow = true;
 	
+	public float angleMaxDst = 90f;
 	public float velocityMultiple = 3f;
 	public float warmupTime = 120f;
 	public int trailLength = 8;
@@ -51,15 +56,30 @@ public class BoostAbility extends Ability{
 		this.velocityMultiple = velocityMultiple;
 	}
 	
-	protected Trail trail = new Trail(trailLength);
-	protected Seq<Float> seq = new Seq<>(maxSize);
+	protected Seq<Trail> trails;
+	protected Queue<Float> seq = new Queue<>(maxSize + 1);
 	protected Interval timer = new Interval();
+	
+	@Override
+	public void init(UnitType type){
+		trails = new Seq<>(type.engines.size);
+		float size = type.engineSize;
+		for(UnitType.UnitEngine e : type.engines){
+			int f = (int)(Mathf.clamp(e.radius / size) * trailLength);
+			trails.add(new Trail(f));
+		}
+	}
 	
 	@Override
 	public BoostAbility copy(){
 		BoostAbility out = (BoostAbility)super.copy();
-		out.trail = new Trail(trailLength);
-		out.seq = new Seq<>(maxSize);
+		
+		out.trails = new Seq<>(trails.size);
+		for(Trail trail : trails){
+			out.trails.add(new Trail(trail.length));
+		}
+		
+		out.seq = new Queue<>(maxSize + 1);
 		out.timer = new Interval();
 		return out;
 	}
@@ -70,8 +90,8 @@ public class BoostAbility extends Ability{
 		return f / seq.size;
 	}
 	
-	public boolean allSame(float angle){
-		if(seq.size < maxSize - 1)return false;
+	public boolean allSame(float angle, float lookAng){
+		if(seq.size < maxSize - 1 || !Angles.within(angle, lookAng, angleMaxDst))return false;
 		for(float f : seq){
 			if(!Angles.within(angle, f, angleCone)){
 				return false;
@@ -83,28 +103,39 @@ public class BoostAbility extends Ability{
 	@Override
 	public void update(Unit unit){
 		float angle = unit.vel.angle();
-		float speed =unit.vel.len();
-		boolean same = allSame(angle);
+		float speed = unit.vel.len();
+		boolean same = allSame(angle, unit.rotation());
 		
-		
-		if(same){
-			unit.speedMultiplier(velocityMultiple);
+		if(speed < 0.01f && !seq.isEmpty()){
+			seq.removeFirst();
 		}
 		
-		if(seq.size > maxSize)seq.remove(0);
+		if(same){
+			unit.speedMultiplier(unit.speedMultiplier() * velocityMultiple);
+		}
+		
+		if(seq.size > maxSize)seq.removeFirst();
 		if(timer.get(12f) && speed > 0.1f)seq.add(angle);
 		
 		if(Vars.headless)return;
-		Tmp.v1.trns(unit.rotation, -unit.type.engineOffset + unit.type.engineSize / 2);
-		trail.update(unit.x + Tmp.v1.x, unit.y + Tmp.v1.y, same ? 1 : 0);
 		
+		for(int i = 0; i < trails.size; i++){
+			Trail trail = trails.get(i);
+			UnitType.UnitEngine engine = unit.type.engines.get(i);
+			
+			Vec2 vec2 = PositionOffset.unitEngineOffset(unit, engine);
+			trail.update(unit.x + vec2.x, unit.y + vec2.y, same ? 1 : 0);
+		}
 	}
 	
 	@Override
 	public void draw(Unit unit){
 		float z = Draw.z();
-		Draw.z(unit.type.lowAltitude ? Layer.flyingUnitLow - 0.001f : Layer.flyingUnit - 0.001f);
-		trail.draw(unit.team.color, unit.type.engineSize / 1.5f);
+		Draw.z(unit.type.engineLayer > 0 ? unit.type.engineLayer : unit.type.lowAltitude ? Layer.flyingUnitLow - 0.001f : Layer.flyingUnit - 0.001f);
+		Color color = unit.type.engineColor == null ? unit.team.color : unit.type.engineColor;
+		for(int i = 0; i < trails.size; i++){
+			trails.get(i).draw(color, unit.type.engines.get(i).radius / 1.25f);
+		}
 		Draw.z(z);
 		
 		if(!drawAirFlow)return;
